[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lutron-cli"
version = "0.1.0"
description = "CLI for Lutron Caseta smart lighting control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Omar Shahine" }]
dependencies = [
    "pylutron-caseta>=0.28.0",
    "click~=8.1",
    "zeroconf~=0.38.4",
    "xdg~=5.1",
]

[project.scripts]
lutron = "lutron_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/lutron_cli"]
