[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lutron-cli"
version = "0.1.0"
description = "CLI for Lutron Caseta smart lighting control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Omar Shahine", email = "omar@shahine.com" }]
keywords = ["lutron", "caseta", "smart-home", "home-automation", "openclaw-plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "pylutron-caseta>=0.28.0",
    "click~=8.1",
    "zeroconf>=0.38.4",
    "xdg~=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "build>=1.2",
]

[project.scripts]
lutron = "lutron_cli.main:cli"

[project.urls]
Homepage = "https://github.com/omarshahine/lutron-cli"
Repository = "https://github.com/omarshahine/lutron-cli"
Issues = "https://github.com/omarshahine/lutron-cli/issues"
Changelog = "https://github.com/omarshahine/lutron-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/lutron_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
